# 2D-Test-Case

./: Cubature2D.cpp  Cubature2D.hpp  CubatureData2D.cpp  CubatureData2D.hpp  Elements.cpp  Elements.hpp  Energy.txt  ExactSolutions.tex  HEuler.cpp  HEuler.hpp  HIGW.cpp  HIGW.hpp  L2Errors.txt  Legendre_Gauss_Lobatto.cpp  Legendre_Gauss_Lobatto.hpp  README.md  Simple.tex  ViscousExactSolutions.rtf  coordinates.txt  ex1.c  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex18.cpp  ex3.cpp  ex4.cpp  ex7  ex7.cpp  ex8  ex8.cpp  ex9.cpp  exrot01.cpp  gmsh_io.cpp  gmsh_io.hpp  initial_cond.cpp  (+4 more)
IGW/: CMakeLists.txt  InitialConditions.cpp  InitialConditions.hpp  TecplotOutput.hpp  airy.cpp  airy.hpp  main.cpp  poly_eval.cpp  poly_eval.hpp
